pointer ao cursor do mouse e hover no button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <title>Habits</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon" />
 </head>
 
 <body>
