adicionado metas e mudança da logo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto+Mono:wght@700&display=swap"
         rel="stylesheet">
-    <title>Habits</title>
+    <title>Habits & Goals</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/icon.svg" type="image/x-icon" />
 </head>
 
 <body>
@@ -32,6 +32,10 @@
             <div class="habit" data-name="run">🏃‍♂️</div>
             <div class="habit" data-name="read">📖</div>
             <div class="habit" data-name="music">🎵</div>
+            <div class="habit" data-name="js"><img src="./assets/logo-js.svg" alt=""></div>
+            <div class="habit" data-name="react"><img src="./assets/logo-react.svg" alt=""></div>
+            <div class="habit" data-name="ruby"><img src="./assets/logo-ruby.svg" alt=""></div>
+            <div class="habit" data-name="study-school"><img src="./assets/study-school.svg" alt=""></div>
         </div>
 
         <div class="days"></div>
