change layout and remove habits

--- a/index.html
+++ b/index.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto+Mono:wght@700&display=swap"
-        rel="stylesheet">
-    <title>Habits & Goals</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./assets/icon.svg" type="image/x-icon" />
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Manrope:wght@500&display=swap" rel="stylesheet">
+    <title>Hábitos</title>
+    <link rel="stylesheet" href="./src/style.css" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="./assets/logo.svg" alt="Logomarca do aplicativo habits">
-
-        <button>
-            <img src="./assets/plus.svg" alt="Ícone sinal de mais roxo">
-            <div>
-                Registrar o meu dia
-            </div>
-        </button>
+      <p>hábitos</p>
+        <i class="ph-light ph-plus-circle button"></i>
     </header>
 
     <form id="form-habits">
-        <div class="habits">
-            <div class="habit" data-name="study">📒</div>
-            <div class="habit" data-name="run">🏃‍♂️</div>
-            <div class="habit" data-name="read">📖</div>
-            <div class="habit" data-name="music">🎵</div>
-            <div class="habit" data-name="js"><img src="./assets/logo-js.svg" alt=""></div>
-            <div class="habit" data-name="react"><img src="./assets/logo-react.svg" alt=""></div>
-            <div class="habit" data-name="ruby"><img src="./assets/logo-ruby.svg" alt=""></div>
-            <div class="habit" data-name="study-school"><img src="./assets/study-school.svg" alt=""></div>
-        </div>
+      <div class="habits">
+        <div class="habit" data-name="geral"></div>
+      </div>
 
-        <div class="days"></div>
+      <div class="days"></div>
     </form>
 
     <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
-    <script src="./script.js"></script>
-</body>
-
+    <script src="./src/script.js"></script>
+  </body>
 </html>
