change logo and add info

--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Manrope:wght@500&display=swap" rel="stylesheet">
-    <title>Hábitos</title>
+    <title>HabitHub</title>
     <link rel="stylesheet" href="./src/style.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
 
   <body>
     <header>
-      <p>hábitos</p>
-        <i class="ph-light ph-plus-circle button"></i>
+      <div class="logo">
+        <img src="./src/assets/logo.svg" alt="">
+        <span>HabitHub</span>
+      </div>
+      <i class="ph-light ph-plus-circle button"></i>
     </header>
+    
+    <div class="info">
+      <p>
+        <i class="ph ph-info"></i>
+        Escolha um hábito que deseja desenvolver. Clique no botão acima para adicionar um novo dia.
+        <br>
+        Volte aqui todos os dias para marcar seu hábito como concluído.
+      </p>
+    </div>
 
     <form id="form-habits">
       <div class="habits">
